--- a/spec/dummy/app/views/tenon/events/index.html.haml
+++ b/spec/dummy/app/views/tenon/events/index.html.haml
@@ -1,5 +1,6 @@
 = react_component 'ResourceIndexRoot',
     title: 'Events',
+    breadcrumbs: breadcrumb_links,
     recordsPath: events_path(format: 'json'),
     newPath: new_event_path,
     childComponentNames: { Record: 'EventRecord'}
