--- a/spec/dummy/app/views/tenon/redirects/_form.html.haml
+++ b/spec/dummy/app/views/tenon/redirects/_form.html.haml
@@ -1,52 +1,35 @@
-.sidebar-container
-  .sidebar
-    .content
-      %h2 Redirects
-      = link_to "New Redirect", new_redirect_path, class: 'btn btn-block btn-primary'
+= autosaving_form_for @redirect do |f|
+  .toolbar.bg-color-primary-dk10
+    = render 'tenon/shared/breadcrumbs'
+    .actions
+      - if can?(:publish, @redirect)
+        %button.action-btn.btn.btn-flat.submit{ data: { disable_with: "Please wait..." } } Save
 
-.page-wrap
-  %header
-    %h1= form_header_for(@redirect)
+      %a.action-icon.dropdown-button{ href: '#!', data: { activates: 'form-dropdown'} }
+        = i('more_vert')
 
-    .tools
-      = render "tenon/shared/section_header/sidebar_toggle"
+      %ul.dropdown-content#form-dropdown
+        - if can?(:create, Tenon::ItemVersion)
+          = render 'tenon/shared/draft_controls', obj: @redirect
 
-  .main-content
-    = autosaving_form_for @redirect do |f|
-      .flash.flash-alert{style: 'padding-right: 40px;'}
-        = i('warning')
-        Redirects will be run when a page cannot be found. It will not redirect an existing page.
+        - if @redirect.persisted?
+          %li
+            = link_to @redirect, data: { method: :delete, confirm: 'Are you sure you want to delete this?' }, class: 'delete-link' do
+              = i('delete')
 
-      = error_messages_for :redirect
-      .fields.large.tabs
-        .tab-pane.active#details
-          .form-group
-            = f.text_field :in, label: 'Route to match', explanation: 'String, can be written as a regular expression (without opening and closing /)', placeholder: '\/old-path\/(\d+)-(\.*)'
-          .form-group
-            = f.text_field :out, label: 'Destination', explanation: 'Zero-indexed captures can be returned in {x}', placeholder: '/new-path/{0}-{1}'
+  %main
+    = error_messages_for :redirect
 
-      .fields.small
-        %h4.box-label Details
-        .box
-          .form-group.bordered.inline
-            = f.check_box :active, class: 'tn-checkbox-right'
-            = f.super_label :active
+    .panel.block
+      = i('warning')
+      Redirects will be run when a page cannot be found. It will not redirect an existing page.
 
-        %h4.box-label Actions
-        .box
-          .content
-            - if can?(:publish, @redirect)
-              %button.btn.btn-block.btn-comp{ data: { disable_with: "Please wait..." } } Save
-            - if can?(:create, Tenon::ItemVersion)
-              = save_draft_button(@redirect)
-              .last-autosave
+    = f.text_field :in, required: true, label: 'Route to match', explanation: 'String, can be written as a regular expression (without opening and closing /)', placeholder: '\/old-path\/(\d+)-(\.*)'
 
-          %hr
-          .content
-            = clear_draft_link if params[:version]
-            = load_draft_link(@redirect)
-            - if @redirect.persisted?
-              = link_to "Delete", @redirect, data: {method: :delete, confirm: 'Are you sure you want to delete this?'}, :class => 'delete-link'
-        .spacer
+    = f.text_field :out, required: true, label: 'Destination', explanation: 'Zero-indexed captures can be returned in {x}', placeholder: '/new-path/{0}-{1}'
 
-  .spacer
+    .form-label Details
+    .panel.block
+      = f.check_box :active
+
+    .spacer
