--- a/spec/dummy/app/views/tenon/redirects/index.html.haml
+++ b/spec/dummy/app/views/tenon/redirects/index.html.haml
@@ -1,5 +1,6 @@
 = react_component 'ResourceIndexRoot',
     title: 'Redirects',
+    breadcrumbs: breadcrumb_links,
     recordsPath: redirects_path(format: 'json'),
     newPath: new_redirect_path,
     childComponentNames: { List: 'RedirectList',
