--- a/lib/generators/tenon/scaffold/templates/view_index.html.haml
+++ b/lib/generators/tenon/scaffold/templates/view_index.html.haml
@@ -1,24 +1,5 @@
-- content_for :sidebar do
-  .sidebar
-    .content
-      %h2 <%= plural_name.titleize %>
-      = link_to "New <%= singular_name.titleize %>", new_<%= singular_name %>_path, class: 'btn btn-block btn-primary'
-
-%header
-  %h1 <%= plural_name.titleize %>
-
-  .tools
-    = render "tenon/shared/section_header/sidebar_toggle"
-
-    .header-button
-      = link_to '#', id: 'quick-search-toggle' do
-        .header-icon= fa_icon('fw search')
-
-.toolbox
-  = render "tenon/shared/section_header/quick_search", record_list: '#<%= plural_name %>'
-
-.main-content
-  = error_messages_for :<%= singular_name %>
-  %ul#<%= plural_name %>.record-list<% if attributes.map(&:name).include?('list_order') %>.sortable<% end -%>{data: {records: {url: <%= plural_name %>_path(format: 'json'), template: 'tenon/templates/<%= plural_name %>/<%= singular_name %>_row', name: '<%= singular_name %>'}<% if attributes.map(&:name).include?('list_order') %>, :'reorder-path' => reorder_<%= plural_name %>_path<% end %>}}
-
-  = link_to "Load More <%= plural_name.titleize %>", '#', :class => 'btn btn-comp infinite-loader', 'data-record-list' => '#<%= plural_name %>'
+= react_component 'ResourceIndexRoot',
+    title: '<%= singular_name.titleize %>',
+    breadcrumbs: breadcrumb_links,
+    recordsPath: <%= singular_name %>_path(format: 'json'),
+    newPath: new_<%= singular_name %>_path
