--- a/spec/dummy/app/views/tenon/contacts/index.html.haml
+++ b/spec/dummy/app/views/tenon/contacts/index.html.haml
@@ -1,4 +1,5 @@
 = react_component 'ResourceIndexRoot',
     title: 'Contacts',
+    breadcrumbs: breadcrumb_links,
     recordsPath: contacts_path(format: 'json'),
     childComponentNames: { Record: 'ContactRecord' }
