--- a/spec/dummy/app/views/tenon/galleries/_form.html.haml
+++ b/spec/dummy/app/views/tenon/galleries/_form.html.haml
@@ -1,46 +1,31 @@
-.sidebar-container
-  .sidebar
-    .content
-      %h2 Galleries
-      = link_to "New Gallery", new_gallery_path, class: 'btn btn-block btn-primary'
+= autosaving_form_for @gallery do |f|
+  .toolbar.bg-color-primary-dk10
+    = render 'tenon/shared/breadcrumbs'
+    .actions
+      - if can?(:publish, @gallery)
+        %button.action-btn.btn.btn-flat.submit{ data: { disable_with: "Please wait..." } } Save
 
-.page-wrap
-  %header
-    %h1= form_header_for(@gallery)
+      %a.action-icon.dropdown-button{ href: '#!', data: { activates: 'form-dropdown'} }
+        = i('more_vert')
 
-    .tools
-      = render "tenon/shared/section_header/sidebar_toggle"
+      %ul.dropdown-content#form-dropdown
+        - if can?(:create, Tenon::ItemVersion)
+          = render 'tenon/shared/draft_controls', obj: @gallery
 
-  .main-content
+        - if @gallery.persisted?
+          %li
+            = link_to @gallery, data: { method: :delete, confirm: 'Are you sure you want to delete this?' }, class: 'delete-link' do
+              = i('delete')
+
+  %main
     = error_messages_for :gallery
 
-    = autosaving_form_for @gallery do |f|
-      .fields.large
-        .form-group
-          = f.text_field :title
+    = f.text_field :title, required: true, class: 'form-title-field'
 
-        .form-group
-          %p
-            = link_to_add_association "Add another photo", f, :photos, 'data-association-insertion-node' => '#photo-list', 'data-association-insertion-method' => 'append'
-            = link_to 'Add several', new_item_asset_path(multiple: true), class: 'btn btn-comp browse', data: {'modal-remote' => true, 'modal-title' => "Select file", 'modal-handler' => 'Tenon.features.MultipleAssetAttachment', target: '.tn-tc-asset-fields' }
+    .form-label Photos
+    .panel.block
+      = link_to_add_association "Add another photo", f, :photos, 'data-association-insertion-node' => '#photo-list', 'data-association-insertion-method' => 'append'
+      = link_to 'Add several', new_item_asset_path(multiple: true), class: 'btn btn-comp browse', data: {'modal-remote' => true, 'modal-title' => "Select file", 'modal-handler' => 'Tenon.features.MultipleAssetAttachment', target: '.tn-tc-asset-fields' }
 
-          %ul.nested-field-list.sortable#photo-list
-            = f.nested_fields :photo
-
-      .fields.small
-        %h4.box-label Publish
-        .box
-          .content
-            - if can?(:publish, @gallery)
-              = f.submit 'Save', class: 'btn btn-block btn-comp', data: { disable_with: "Please wait..." }
-
-            - if can?(:create, Tenon::ItemVersion)
-              = save_draft_button(@gallery)
-              .last-autosave
-
-          %hr
-          .content
-            = clear_draft_link if params[:version]
-            = load_draft_link(@gallery)
-            - if @gallery.persisted?
-              = link_to "Delete", @gallery, :data => {:method => :delete, :confirm => "Are you sure you want to delete this?"}, :class => 'delete-link'
+      %ul.nested-field-list.sortable#photo-list
+        = f.nested_fields :photo
