comment out some placeholder text just to make things look nicer

--- a/app/views/tenon/index/index.html.haml
+++ b/app/views/tenon/index/index.html.haml
@@ -1,5 +1,5 @@
 - content_for :util_nav_content do
-  `content_for :util_nav_content do`
+  / `content_for :util_nav_content do`
 
 %main
-  %h1 Index#Index
+  / %h1 Index#Index
