--- a/app/assets/stylesheets/tenon/backwards_compatibility/tenon-content.scss
+++ b/app/assets/stylesheets/tenon/backwards_compatibility/tenon-content.scss
@@ -2,26 +2,27 @@
   .tn-tc-sizes {
     display: none;
   }
-  &.mobile-breakpoint {
-    .one, .two, .three, .four, .five, .six, .seven, .eight, .nine, .ten, .eleven, .twelve {
-      @extend .column;
-      @extend .width12;
-    }
-    .wrapped-image {
-      &.left, &.right {
-        float: none;
-        padding: 0;
-      }
-    }
-  }
+  // &.mobile-breakpoint {
+  //   .one, .two, .three, .four, .five, .six, .seven, .eight, .nine, .ten, .eleven, .twelve {
+  //     @include span-columns(12);
+  //   }
+  //   .wrapped-image {
+  //     &.left, &.right {
+  //       float: none;
+  //       padding: 0;
+  //     }
+  //   }
+  // }
 }
 
 .tn-tc-main-actions {
   a {
     @include transition(all .2s ease);
-    margin: 20px 20px 0 0;
+    font-size: $tn-font-large;
+    margin: $tn-margin $tn-margin 0 0;
     text-transform: uppercase;
     span {
+      font-size: $tn-font-small;
       position: relative;
       top: -2px;
       padding-left: 5px;
@@ -33,7 +34,7 @@
 }
 
 .tenon-content {
-  margin-top: 20px;
+  margin-top: $tn-margin;
   // @import "variables";
   // @import "styleguides/styleguide";
   // @extend body;
@@ -50,14 +51,14 @@
       box-sizing: content-box;
       max-height: 200px;
       padding: 5px 10px;
-      border: 1px solid map-get($grey, "base");
-      background: map-get($grey, "lighten-2");
-      box-shadow: 1px 1px 5px map-get($grey, "base");
+      border: 1px solid $tn-dark-grey;
+      background: $tn-light-grey;
+      box-shadow: 1px 1px 5px $tn-dark-grey;
     }
     &.sortable-placeholder {
       min-height: 50px;
       max-height: 200px;
-      border: 1px dashed map-get($grey, "base");
+      border: 1px dashed $tn-dark-grey;
     }
     i {
       font-size: 20px;
@@ -70,13 +71,14 @@
     float: left;
   }
   .tn-tc-topbar, .tn-tc-bottombar {
-    height: 36px;
     padding: 0;
+    height: 36px;
+    // background-color: $tn-med-grey;
     .actions {
       @include transition(all .2s ease);
       position: relative;
       text-align: right;
-      color: map-get($grey, "base");
+      color: $tn-dark-grey;
       i {
         @include transition(all .2s ease);
       }
@@ -84,19 +86,22 @@
         @include transition(all .2s ease);
         display: inline-block;
         padding: 10px 0 5px;
-        color: map-get($grey, "base");
+        color: $tn-dark-grey;
         span {
           position: relative;
           top: -2px;
           display: inline-block;
         }
       }
-      .tn-tc-open-library {
+      a.tn-tc-open-library {
         @include transform(translate(-50%, 0));
         position: absolute;
         top: 0;
         left: 50%;
         text-transform: uppercase;
+        span {
+          font-size: $tn-font-small;
+        }
       }
       a:hover {
         text-decoration: none;
@@ -111,12 +116,12 @@
   .tn-tc-row:hover {
     &:hover {
       .tn-tc-topbar, .tn-tc-bottombar {
-        @extend .black-text;
+        color: $tn-black;
         a {
-          @extend .black-text;
+          color: $tn-black;
         }
         i {
-          @extend .black-text;
+          color: $tn-black;
         }
       }
     }
@@ -125,6 +130,18 @@
     }
   }
   .tn-tc-fields {
+    // @include outer-container;
+    &::after {
+      clear: both;
+      content: "";
+      display: table;
+    }
+    max-width: $max-width;
+    margin: {
+      left: auto;
+      right: auto;
+    }
+
     min-height: 20px;
   }
   > div {
@@ -132,17 +149,18 @@
   }
   a.add-image {
     span {
-      @extend .grey;
+      font-family: $tn-open-sans;
       line-height: 200px;
       display: block;
       height: 200px;
       text-align: center;
-      color: map-get($grey, "base");
-      border: 4px dashed map-get($grey, "base");
+      color: $tn-dark-grey;
+      border: 4px dashed $tn-dark-grey;
+      background: $tn-med-grey;
     }
   }
   .wrapped-image {
-    @media #{$bp-sm} {
+    @include media($tn-bp-mobile) {
       &.left, &.right {
         float: none;
         padding: 0;
@@ -181,19 +199,19 @@
     }
   }
   textarea.caption, div.tn-tc-caption {
-    font-size: 14px;
+    font-size: $tn-font-small;
     width: 100%;
     margin: 0;
     padding: 5px;
     resize: none;
-    color: #ffffff;
-    background: map-get($grey, "base");
+    color: #fff;
+    background: $tn-dark-grey;
   }
   textarea.caption:-moz-placeholder {
-    color: #ffffff;
+    color: #fff;
   }
   textarea.caption::-webkit-input-placeholder {
-    color: map-get($grey, "lighten-2");
+    color: $tn-light-grey;
   }
   .one, .two, .three, .four, .five, .six, .seven, .eight, .nine, .ten, .eleven, .twelve {
     @include transition(width .2s ease);
@@ -220,12 +238,12 @@
   padding: 60px 0 40px;
   .tn-text-overlay {
     position: relative;
-    // z-index: 10;
+    z-index: 10;
     float: left;
     width: 46%;
     margin: 0 2%;
     .editable-text {
-      background-color: rgba(#ffffff, .8);
+      background-color: rgba(#fff, .8);
     }
   }
   .tn-tc-background-image {
@@ -248,29 +266,29 @@
   }
   button:active, button:focus {
     outline: none;
-    background: lighten($primary-color, 10%);
+    background: lighten($tn-primary, 10%);
   }
   .link-form {
-    // z-index: 1000;
+    z-index: $tn-z-medium-editor-controls;
   }
 }
 
 [contenteditable=true]:empty:not(:focus):before {
-  @extend .grey-text;
   content: attr(data-placeholder);
+  color: $tn-med-grey;
 }
 
 a.open-embed-modal {
   @include transition(all .2s ease);
-  font-size: 14px;
+  font-size: $tn-font-small;
   display: block;
   padding: 5px 0;
   text-transform: uppercase;
-  color: map-get($grey, "base");
+  color: $tn-dark-grey;
 }
 
 .tn-tc-row:hover a.open-embed-modal {
-  @extend .black-text;
+  color: $tn-black;
 }
 
 .embed {
@@ -292,12 +310,12 @@ a.open-embed-modal {
   padding: 60px 0 40px;
   .tn-text-overlay {
     position: relative;
-    // z-index: 10;
+    z-index: 10;
     float: left;
     width: 46%;
     margin: 0 2%;
     .editable-text {
-      background-color: rgba(#ffffff, .8);
+      background-color: rgba(#fff, .8);
     }
   }
   .tn-tc-background-image {
