--- a/app/views/tenon/tenon_content/row_types/form/_full_width_text.html.haml
+++ b/app/views/tenon/tenon_content/row_types/form/_full_width_text.html.haml
@@ -2,6 +2,6 @@
   = f.hidden_field :list_order
   = f.hidden_field :row_type
   = f.fields_for :pieces do |piece|
-    .tn-tc-piece.twelve
+    .tn-tc-piece.inner12
       = render "tenon/tenon_content/piece_types/form/text", f: piece, position: 0
   .spacer
