--- a/app/views/tenon/tenon_content/row_types/form/_left_image_right_text.html.haml
+++ b/app/views/tenon/tenon_content/row_types/form/_left_image_right_text.html.haml
@@ -4,9 +4,9 @@
   = f.fields_for :pieces do |piece|
     = piece.hidden_field :piece_type
     - if piece.object.piece_type == "Image"
-      .tn-tc-piece.tn-tc-asset-field{:class => piece.object.size}
+      .tn-tc-piece.tn-tc-asset-field{ class: "inner#{piece.object.size}" }
         = render "tenon/tenon_content/piece_types/form/image", f: piece, style: 'half'
     - elsif piece.object.piece_type == "Text"
-      .tn-tc-piece.omega{:class => piece.object.size}
+      .tn-tc-piece.omega{ class: "inner#{piece.object.size}" }
         = render "tenon/tenon_content/piece_types/form/text", f: piece
   .spacer
