--- a/app/views/tenon/tenon_content/row_types/form/_two_column_image_and_text.html.haml
+++ b/app/views/tenon/tenon_content/row_types/form/_two_column_image_and_text.html.haml
@@ -2,7 +2,7 @@
   = f.hidden_field :row_type
   = f.hidden_field :list_order
   -[[0,1], [2,3]].each do |positions|
-    .six{class: cycle('', 'omega')}
+    .inner6{class: cycle('', 'omega')}
       = f.fields_for :pieces, f.object.pieces.select { |p| positions.include?(p.position) } do |piece|
         = piece.hidden_field :piece_type
         - if piece.object.piece_type == 'Image'
