--- a/app/views/tenon/tenon_content/_fields.html.haml
+++ b/app/views/tenon/tenon_content/_fields.html.haml
@@ -11,9 +11,9 @@
     You can format your text by highlighting it and selecting options from the pop-up menu.
 
   .tn-tc-main-actions
-    = link_to '#', class: 'tn-tc-pop-out btn btn-primary' do
-      = fa_icon('eye')
-      %span Edit in Preview Mode
+    / = link_to '#', class: 'tn-tc-pop-out btn btn-primary' do
+    /   = i('visibility')
+    /   %span Edit in Preview Mode
 
     = link_to '#', class: 'tn-tc-add-content btn btn-fab initial-row', data: { modal_target: ".tenon-library", modal_closest: '.tn-tc', modal_clone: 'true', modal_title: 'Add Content', modal_handler: 'Tenon.features.tenonContent.Library' }, title: 'Add Content' do
       = i('add')
